--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "typescript": "~3.7.2",
+    "@types/react-router-dom": "^5.1.6",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "husky": "^4.3.0",
     "prettier": "^2.1.1",
-    "husky": "^4.3.0"
+    "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
