--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/lodash": "^4.14.161",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "socket.io-client": "^2.3.1"
+    "socket.io-client": "^2.3.1",
+    "soundfont-player": "^0.12.0",
+    "tone": "^14.7.58"
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
