--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-top-loading-bar": "^2.0.1",
     "socket.io-client": "^2.3.1",
     "soundfont-player": "^0.12.0",
     "tone": "^14.7.58",
