--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@types/uuid": "^8.3.0",
     "axios": "^0.20.0",
     "localforage": "^1.9.0",
     "localforage-observable": "^2.1.1",
@@ -17,6 +18,7 @@
     "socket.io-client": "^2.3.1",
     "soundfont-player": "^0.12.0",
     "tone": "^14.7.58",
+    "uuid": "^8.3.1",
     "zen-observable": "^0.8.15"
   },
   "devDependencies": {
