Add google analytics

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "localforage-observable": "^2.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-top-loading-bar": "^2.0.1",
