--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "axios": "^0.20.0",
     "localforage": "^1.9.0",
     "localforage-observable": "^2.1.1",
+    "material-auto-rotating-carousel": "^3.0.2",
     "react": "^16.13.1",
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-ga": "^3.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-swipeable-views": "^0.13.9",
     "react-top-loading-bar": "^2.0.1",
     "socket.io-client": "^2.3.1",
     "soundfont-player": "^0.12.0",
